tests/purs/failing/EmptyClass.purs
-- @shouldFailWith ErrorParsingModule
module Main where

class Foo x where

bar :: String
bar = "hello"
