tests/purs/failing/EmptyClass.out
Error found:
at tests/purs/failing/EmptyClass.purs:6:1 - 6:1 (line 6, column 1 - line 6, column 1)

  Unable to parse module:
  Unexpected or mismatched indentation


See https://github.com/purescript/documentation/blob/master/errors/ErrorParsingModule.md for more information,
or to contribute content related to this error.

